# compass_a2a

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: smoke_test_built_cli.sh
src/compass_a2a/: __init__.py  agent_card.py  app.py  auth.py  capabilities.py  cli.py  compass_gateway.py  config.py  executor.py  principal.py  read_skills.py  skills.py  write_commands.py
tests/: test_app.py  test_compass_gateway.py
